Bug 1063194 - Make assertions in Axis::OverscrollBy() more informative. r=kats